# SistemasDistribuidos

./: .gitignore  CMakeLists.txt  README.md  RPC_PROTOCOL.md  agent.cpp  server.cpp
common/: game_state.h  rpc_protocol.cpp  rpc_protocol.h  tcp_connection.cpp  tcp_connection.h
logic/: logic.cpp  logic.h
